24.08. fix overflow in header

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -195,6 +195,7 @@
           display: flex;
           height: 100%;
           align-items: center;
+          overflow: hidden;
           justify-content: space-between;
         }
       }
